--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "forutils"]
 	path = forutils
-	url = https://github.com/cmbant/forutils
+	url = https://github.com/simrannerval/forutils
