ran tests, pushing to see if the tests will pass on github

--- a/planck_2018_params.ini
+++ b/planck_2018_params.ini
@@ -1,4 +1,4 @@
-highL_unlensed_cl_template = /home/simran/CAMB-particlebursts/camb/HighLExtrapTemplate_lenspotentialCls.dat
+highL_unlensed_cl_template = /home/simran/.local/lib/python3.12/site-packages/camb/HighLExtrapTemplate_lenspotentialCls.dat
 number_of_threads = 0
 DebugParam = 0.0000000000000000
 feedback_level = 1
@@ -53,11 +53,11 @@ Alens = 1.0000000000000000
 reionization = T
 re_use_optical_depth = T
 re_optical_depth = 0.05430842
-re_delta_redshift = 0.5
 re_ionization_frac = -1
 re_helium_redshift = 3.5
 re_helium_delta_redshift = 0.5
 re_helium_redshiftstart = 6.0000000000000000
+re_delta_redshift = 0.5
 pivot_scalar = 0.05
 pivot_tensor = 0.05
 initial_power_num = 1
@@ -95,5 +95,5 @@ scalar_output_file = scalCls.dat
 lensed_output_file = lensedCls.dat
 lens_potential_output_file = lenspotentialCls.dat
 scalar_covariance_output_file = scalarCovCls.dat
-version_check = 1.5.0
+version_check = 1.5.8
 output_file_headers = T
